# simple-bank-architecture

./: ChangeLog.md  README.md  package.yaml  simple-bank-architecture.cabal
app/: Main.hs
src/: Lib.hs
src/Lib/: Config.hs
src/Lib/App/: Monad.hs
