cabal-version:       >=1.10
name:                simple-bank-architecture
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              zypeh
maintainer:          zypeh.geek@gmail.com
-- copyright:
-- category:
build-type:          Simple

executable simple-bank-architecture
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
  -- hs-source-dirs:
  default-language:    Haskell2010
